--- a/index.html
+++ b/index.html
@@ -7,36 +7,32 @@
     <title>Spotify Clone</title>
     <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body>
+  <body class="mainContainer">
 
     <!-- Encabezado -->
-    <header class="header">
-      <div class="logo-and-nav">
-        <div class="logo-spotify-nav-bar" id="logo-spotify">
-              <img class="logo-s" src="./images/spotify-logo.png" alt="Spotify Logo">
-        </div>    
-
-        <nav class="nav-bar-left">
-           <ul class="nav-bar-ul">
-            <li> <a class="nav-bar-item" href="#premium"> Premium </a> </li>
-            <li> <a class="nav-bar-item" href="#discover"> Discover </a> </li>
-            <li> <a class="nav-bar-item" href="#help"> Help </a> </li>
-            <li> <a class="nav-bar-item" href="#download"> Download </a> </li>
-          </ul>
-        </nav>
-      </div>
-        
-      <div class="background-image">
-         <img class="img-back" src="./images/landing.jpg" alt="Imagen fondo principal">
-         <h1>Music for everyone.</h1>
-         <p>Spotify is now free on mobile, tablet and computer. 
-            Listen to the right music, wherever you are.</p>
-      </div>
+    <header class="mainHeader">
+        <img class="logoLeft" src="./images/spotify-logo.png" alt="Spotify Logo">
+        <ul class="navbarRight">
+          <li class="navbar-item"> <a href="#premium"> Premium </a> </li>
+          <li class="navbar-item"> <a href="#discover"> Discover </a> </li>
+          <li class="navbar-item"> <a href="#help"> Help </a> </li>
+          <li class="navbar-item"> <a href="#download"> Download </a> </li>
+        </ul>
     </header>
 
-
     <!-- Seccion 1 -->
-    <section class="section-1">
+    <section class="section1">
+      <img class="img-back" src="./images/landing.jpg" alt="Imagen fondo principal">
+      <div class="textMain">
+        <h1 class="bi-h1">Music for everyone.</h1>
+        <p class="bi-p">Spotify is now free on mobile, tablet and computer.</p>
+        <p class="bi-p">Listen to the right music, wherever you are.</p>
+      </div>
+    </section>
+
+
+    <!-- Seccion 2 -->
+    <section class="section2">
       <div class="whats-on-spotify-tittle">
         <h2>What’s on Spotify?</h2>
       
@@ -61,8 +57,8 @@
       </div>
     </section>
 
-    <!-- Seccion 2 -->
-    <section class="section-2">
+    <!-- Seccion 3 -->
+    <section class="section3">
 
       <div class="text-left">
 
