--- a/index.html
+++ b/index.html
@@ -5,24 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body class="mainContainer">
-
     <!-- Encabezado -->
     <header class="mainHeader">
-        <img class="logoLeft" src="./images/spotify-logo.png" alt="Spotify Logo">
-        <ul class="navbarRight">
-          <li class="navbar-item"> <a href="#premium"> Premium </a> </li>
-          <li class="navbar-item"> <a href="#discover"> Discover </a> </li>
-          <li class="navbar-item"> <a href="#help"> Help </a> </li>
-          <li class="navbar-item"> <a href="#download"> Download </a> </li>
-        </ul>
+      <img
+        class="logoLeft"
+        src="./images/spotify-logo.png"
+        alt="Spotify Logo"
+      />
+      <ul class="navbarRight">
+        <li class="navbar-item"><a href="#premium"> Premium </a></li>
+        <li class="navbar-item"><a href="#discover"> Discover </a></li>
+        <li class="navbar-item"><a href="#help"> Help </a></li>
+        <li class="navbar-item"><a href="#download"> Download </a></li>
+      </ul>
     </header>
 
     <!-- Seccion 1 -->
     <section class="section1">
-      <img class="img-back" src="./images/landing.jpg" alt="Imagen fondo principal">
+      <img
+        class="img-back"
+        src="./images/landing.jpg"
+        alt="Imagen fondo principal"
+      />
       <div class="textMain">
         <h1 class="bi-h1">Music for everyone.</h1>
         <p class="bi-p">Spotify is now free on mobile, tablet and computer.</p>
@@ -30,64 +37,71 @@
       </div>
     </section>
 
-
     <!-- Seccion 2 -->
     <section class="section2">
       <div class="whats-on-spotify-tittle">
         <h2>What’s on Spotify?</h2>
-      
-        <div class="cards1">
-          <div class="card1-millions-of-songs">
-            <img src="./images/music-icon.png" alt="icono-music">
-            <h3 class="title-1">Millions of Songs</h3>
-            <p>There are millions of songs on Spotify</p>
-          </div>
-
-          <div class="card2-hd-music">
-            <img src="./images/high-quality-icon.png" alt="icono-music2">
-            <h3 class="title-1">HD Music</h3>
-            <p>Listen to music as if you were listening live</p>
-          </div>
-
-          <div class="card3-stream-everywhere">
-            <img src="./images/devices-icon.png" alt="icono-devices">
-            <h3 class="title-1">Stream Everywhere</h3>
-            <p>Stream music on your smartphone, tablet or computer</p>
-          </div>        
       </div>
+
+      <div class="allCards">
+        <div class="card1-millions-of-songs">
+          <img class="cardsImg" src="./images/music-icon.png" alt="icono-music" />
+          <h3 class="title-1">Millions of Songs</h3>
+          <p>There are millions of songs on Spotify</p>
+        </div>
+
+        <div class="card2-hd-music">
+          <img class="cardsImg" src="./images/high-quality-icon.png" alt="icono-music2" />
+          <h3 class="title-1">HD Music</h3>
+          <p>Listen to music as if you were listening live</p>
+        </div>
+
+        <div class="card3-stream-everywhere">
+          <img class="cardsImg" src="./images/devices-icon.png" alt="icono-devices" />
+          <h3 class="title-1">Stream Everywhere</h3>
+          <p>Stream music on your smartphone, tablet or computer</p>
+        </div>
+      </div>
+
     </section>
 
     <!-- Seccion 3 -->
     <section class="section3">
 
       <div class="text-left">
-
         <h2 class="title-text">It’s as yeezy as Kanye West.</h2>
 
         <div class="first-text">
-          <h3 class="title-first-text">Search</h3>
-          <p>Know what you want to listen to? Just search and hit play.</p>
+          <h3 class="title-first-text h3Title">Search</h3>
+          <p class="pSection3">Know what you want to listen to? 
+            Just search and hit play.</p>
         </div>
         <div class="second-text">
-          <h3 class="title-second-text">Browse</h3>
-          <p>Check out the latest charts, brand new releases and great playlists for right now.</p>
+          <h3 class="title-second-text h3Title">Browse</h3>
+          <p class="pSection3">
+            Check out the latest charts, 
+            brand new releases and great 
+            playlists for right now.
+          </p>
         </div>
         <div class="third-text">
-          <h3 class="title-third-text">Discover</h3>
-          <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio.</p>
+          <h3 class="title-third-text h3Title">Discover</h3>
+          <p class="pSection3">
+            Enjoy new music every Monday 
+            with your own personal playlist. 
+            Or sit back and enjoy Radio.
+          </p>
         </div>
       </div>
 
       <div class="image-logo-spoty-center">
-        <img src="./images/spotify-icon-white.png" alt="image-logo-white">
+        <img src="./images/spotify-icon-white.png" alt="image-logo-white" width="200"/>
       </div>
 
-      <div class="print-app-screen">
-        <img src="./images/spotify-app.jpg" alt="image-app">
+      <div class="contain ">
+        <img src="./images/spotify-app.jpg" alt="image-app" width="400"/>
       </div>
-      
-    </section>  
+
+    </section>
   </body>
 </html>
-
-
